Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ Error message and password prompt
 
 <li>$:/view</li>
 
-<li>2020-06-18</li>
+<li>2020-06 / 18 / 17:57:38 /</li>
 
 <li>From collector to creator</li>
 
@@ -12278,7 +12278,7 @@ exports.context = contextWidget;
 <div created="20200527084433269" modified="20200527084433732" title="$:/plugins/tobibeer/preview/defaults/delay">
 <pre>200</pre>
 </div>
-<div created="20200618012844720" creator="debby" modified="20200618095344217" modifier="debby" title="$:/SiteTitle">
+<div created="20200618012844720" creator="debby" modified="20200618100343099" modifier="debby" title="$:/SiteTitle">
 <pre>í ¼í¼žTiddlyWiki</pre>
 </div>
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
@@ -12323,7 +12323,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="2020-06-18" modified="20200618100209348" modifier="debby" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13352,7 +13352,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618100245437" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200618095502747" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>From collector to creator</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -13470,7 +13470,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200127165334843" creator="debby" modified="20200618093450051" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
 </div>
-<div created="20200618095738085" creator="debby" modified="20200618100308404" modifier="debby" tags="Journal" title="2020-06-18">
+<div created="20200618095738085" creator="debby" modified="20200618100159023" modifier="debby" tags="Journal" title="2020-06 / 18 / 17:57:38 /">
 <pre>! Start again
 
 My fascination with note-taking tools went overboard. I can't believe I'm trying out this geeky option--Tiddlywiki with TiddlyBlink. 
@@ -13479,7 +13479,7 @@ Saving with GitHub is iffy, and sometimes this site/page renders strangely. Most
 
 Since what I'm writing here is technically public, I need to write in general terms instead of referring to specific examples. This will be challenging.
 
-In order to follow the principle of never creating notes in isolation, here's a link to [[From collector to creator]]. í ½í¸Š</pre>
+In order to follow the principle of never creating notes in isolation, here's a link to [[From collector to creator]]. ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½</pre>
 </div>
 <div created="20200618094249392" creator="debby" modified="20200618095052710" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
 <pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    
