Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12278,7 +12278,7 @@ exports.context = contextWidget;
 <div created="20200527084433269" modified="20200527084433732" title="$:/plugins/tobibeer/preview/defaults/delay">
 <pre>200</pre>
 </div>
-<div created="20200618012844720" creator="debby" modified="20200618100343099" modifier="debby" title="$:/SiteTitle">
+<div created="20200618012844720" creator="debby" modified="20200618100541640" modifier="debby" title="$:/SiteTitle">
 <pre>í ¼í¼žTiddlyWiki</pre>
 </div>
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
@@ -12323,7 +12323,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div created="20200618100534435" creator="debby" list="[[TiddlyBlink home]]" modified="20200618100534435" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
