--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>í ¼í¼žTiddlyWiki â€” a non-linear personal web notebook</title>
+<title>TiddlyWiki â€” a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -12278,8 +12278,8 @@ exports.context = contextWidget;
 <div created="20200527084433269" modified="20200527084433732" title="$:/plugins/tobibeer/preview/defaults/delay">
 <pre>200</pre>
 </div>
-<div created="20200618012844720" creator="debby" modified="20200618100541640" modifier="debby" title="$:/SiteTitle">
-<pre>í ¼í¼žTiddlyWiki</pre>
+<div created="20200618012844720" creator="debby" modified="20200618100817674" modifier="debby" title="$:/SiteTitle">
+<pre>TiddlyWiki</pre>
 </div>
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
 <pre>LeDoux,McCloud,McDonald,TiddlyWiki,TiddlyWiki5,CamelCase,DuBay,McGraw,McCullough,LeGrange,NaCl,MeOH,EtOH,PiB,TiddlyTools,ResetFind,WikiText,WinBuilder,WinPE,ProgramData,TiddlyFox,GuillermoMartin,AndrewFraser,RochesterMNwalkers,DEdwardsCalgary,WalkaboutMM,HarveyG,McCoy,GeForce,SideBar,AirBnB,PayPal,LeBron,JavaScript,ExpressJet,CutePDF,McClouds,McElroy,McGovern,TableHelper,ShadowTiddler,WikiWords</pre>
@@ -12323,7 +12323,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618100534435" creator="debby" list="[[TiddlyBlink home]]" modified="20200618100534435" modifier="debby" title="$:/StoryList">
+<div created="20200618100534435" creator="debby" list="$:/ControlPanel [[TiddlyBlink home]]" modified="20200618100814454" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
