--- a/index.html
+++ b/index.html
@@ -12323,7 +12323,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618101149775" creator="debby" list="$:/core/ui/SideBar/Recent 2020-06-18" modified="20200618101151580" modifier="debby" title="$:/StoryList">
+<div created="20200618101149775" creator="debby" list="$:/core/ui/SideBar/Recent [[From collector to creator]] 2020-06-18" modified="20200618101327562" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
