Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -509,6 +509,8 @@ Error message and password prompt
 
 <li>TiddlyBlink home</li>
 
+<li>Welcome!</li>
+
 </ul>
 </p>
 
@@ -12323,7 +12325,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618101149775" creator="debby" list="$:/core/ui/SideBar/Recent [[From collector to creator]] 2020-06-18" modified="20200618101327562" modifier="debby" title="$:/StoryList">
+<div created="20200618101455654" creator="debby" list="Welcome!" modified="20200618101508081" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12383,15 +12385,15 @@ exports.context = contextWidget;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;412&quot;
+            &quot;text&quot;: &quot;1280&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;869&quot;
+            &quot;text&quot;: &quot;720&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-US&quot;
+            &quot;text&quot;: &quot;zh-TW&quot;
         }
     }
 }</pre>
@@ -13352,7 +13354,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618095502747" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200618101508494" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>From collector to creator</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -13511,6 +13513,11 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 </div>
 <div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
 <pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
+</div>
+<div created="20200618101519264" creator="debby" modified="20200618101622426" modifier="debby" tags="" title="Welcome!">
+<pre>Welcome to my ''digital garden''! 
+
+This is my attempt to switch [[From collector to creator|from a collector to a creator]].</pre>
 </div>
 
 
