Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10372,8 +10372,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
     }
 }</pre>
 </div>
-<div created="20200106211749103" modified="20200304200121375" tags="tb" title="$:/DefaultTiddlers">
-<pre>[[TiddlyBlink home]]
+<div created="20200106211749103" creator="debby" modified="20200618101707045" modifier="debby" tags="tb" title="$:/DefaultTiddlers">
+<pre>[[Welcome!]]
 </pre>
 </div>
 <div created="20200304200133691" list="$:/jd/fullscreen-editor/EditButton $:/.giffmex/ViewToolbar/new-note-here-datetime $:/.giffmex/ViewTemplate/refscontext TiddlyBlink" modified="20200304200135317" tags="tb" title="$:/fullscreen-editor">
@@ -12310,8 +12310,8 @@ exports.context = contextWidget;
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200618100916586" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200527074318200" creator="debby" modified="20200618101700745" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12325,7 +12325,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618101455654" creator="debby" list="Welcome!" modified="20200618101508081" modifier="debby" title="$:/StoryList">
+<div created="20200618101455654" creator="debby" list="$:/ControlPanel Welcome!" modified="20200618101657822" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13354,7 +13354,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618101508494" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200618101648296" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>From collector to creator</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -13514,10 +13514,12 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 <div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
 <pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
 </div>
-<div created="20200618101519264" creator="debby" modified="20200618101622426" modifier="debby" tags="" title="Welcome!">
+<div created="20200618101519264" creator="debby" modified="20200618101734494" modifier="debby" tags="" title="Welcome!">
 <pre>Welcome to my ''digital garden''! 
 
-This is my attempt to switch [[From collector to creator|from a collector to a creator]].</pre>
+This is my attempt to switch [[from a collector to a creator|From collector to creator]].
+
+I will give further directions as content accumulates on this site.</pre>
 </div>
 
 
