--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@ Error message and password prompt
 
 <li>$:/config/NewJournal/Title</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/.giffmex/ViewToolbar/viewrefscheckboxes</li>
@@ -250,6 +252,8 @@ Error message and password prompt
 <li>$:/sk/WhiteList</li>
 
 <li>$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154</li>
+
+<li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown</li>
 
 <li>$:/state/showeditpreview</li>
 
@@ -994,6 +998,9 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 </div>
 <div created="20191225174624729" modified="20200304195553439" tags="tb" title="$:/config/NewJournal/Title">
 <pre>YYYY-0MM / 0DD / 0hh:0mm:0ss /</pre>
+</div>
+<div created="20200619015634167" creator="debby" modified="20200619015634167" modifier="debby" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown">
+<pre>yes</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -12291,6 +12298,9 @@ exports.context = contextWidget;
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
+<div created="20200619015624004" creator="debby" modified="20200619015631603" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown">
+<pre>yes</pre>
+</div>
 <div created="20200618095006136" creator="debby" modified="20200618095007862" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
@@ -12312,8 +12322,8 @@ exports.context = contextWidget;
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200618101700745" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" creator="debby" modified="20200619015611264" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12327,7 +12337,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="[[Bob Dylan - Rough and Rowdy Ways]] Welcome!" title="$:/StoryList">
+<div created="20200619015606218" creator="debby" list="$:/ControlPanel $:/plugins/tiddlywiki/markdown" modified="20200619015615812" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12387,15 +12397,15 @@ exports.context = contextWidget;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;768&quot;
+            &quot;text&quot;: &quot;1280&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1024&quot;
+            &quot;text&quot;: &quot;720&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en&quot;
+            &quot;text&quot;: &quot;en-US&quot;
         }
     }
 }</pre>
