Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -511,6 +511,8 @@ Error message and password prompt
 
 <li>From collector to creator</li>
 
+<li>New Tiddler</li>
+
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
@@ -999,8 +1001,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20191225174624729" modified="20200304195553439" tags="tb" title="$:/config/NewJournal/Title">
 <pre>YYYY-0MM / 0DD / 0hh:0mm:0ss /</pre>
 </div>
-<div created="20200619015634167" creator="debby" modified="20200619015634167" modifier="debby" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown">
-<pre>yes</pre>
+<div created="20200619015634167" creator="debby" modified="20200619015707951" modifier="debby" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown">
+<pre>no</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -12337,7 +12339,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200619015606218" creator="debby" list="$:/ControlPanel $:/plugins/tiddlywiki/markdown" modified="20200619015615812" modifier="debby" title="$:/StoryList">
+<div created="20200619015606218" creator="debby" list="[[New Tiddler]] $:/core/ui/SideBar/Recent" modified="20200619015717153" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13366,8 +13368,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618101755740" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200619015730670" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Welcome!</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13506,6 +13508,13 @@ In order to follow the principle of never creating notes in isolation, here's a 
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
+</div>
+<div created="20200619015733206" creator="debby" modified="20200619015757882" modifier="debby" tags="" title="New Tiddler">
+<pre>```python
+
+import os
+print('Hello')
+```</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
