Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -511,8 +511,6 @@ Error message and password prompt
 
 <li>From collector to creator</li>
 
-<li>New Tiddler</li>
-
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
@@ -12315,17 +12313,17 @@ exports.context = contextWidget;
 <div created="20200618012853212" creator="debby" modified="20200618093456470" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200527074355500" creator="debby" modified="20200618095335318" modifier="debby" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Basics</pre>
+<div created="20200527074355500" creator="debby" modified="20200619015940443" modifier="debby" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
-<div created="20200618015239429" creator="debby" modified="20200618093352763" modifier="debby" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
+<div created="20200618015239429" creator="debby" modified="20200619015852995" modifier="debby" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
 </div>
-<div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
+<div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200619015611264" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200527074318200" creator="debby" modified="20200619015854403" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12339,7 +12337,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200619015606218" creator="debby" list="[[New Tiddler]] $:/core/ui/SideBar/Recent" modified="20200619015717153" modifier="debby" title="$:/StoryList">
+<div created="20200619015606218" creator="debby" list="$:/ControlPanel $:/core/ui/SideBar/Recent" modified="20200619015849164" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13368,8 +13366,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200619015730670" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Welcome!</pre>
+<div created="20200618014049220" creator="debby" modified="20200619015807277" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Bob Dylan - Rough and Rowdy Ways</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13508,13 +13506,6 @@ In order to follow the principle of never creating notes in isolation, here's a 
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
-</div>
-<div created="20200619015733206" creator="debby" modified="20200619015757882" modifier="debby" tags="" title="New Tiddler">
-<pre>```python
-
-import os
-print('Hello')
-```</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
