--- a/index.html
+++ b/index.html
@@ -509,6 +509,8 @@ Error message and password prompt
 
 <li>Bob Dylan - Rough and Rowdy Ways</li>
 
+<li>Doves - Carousels</li>
+
 <li>From collector to creator</li>
 
 <li>TiddlyBlink</li>
@@ -12337,7 +12339,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200619015606218" creator="debby" list="$:/ControlPanel $:/core/ui/SideBar/Recent" modified="20200619015849164" modifier="debby" title="$:/StoryList">
+<div created="20200619015606218" creator="debby" list="[[Doves - Carousels]] $:/core/ui/MoreSideBar/All TiddlyBlink" modified="20200619021521364" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12410,7 +12412,7 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200618132029097" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200619021653654" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -13366,8 +13368,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200619015807277" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Bob Dylan - Rough and Rowdy Ways</pre>
+<div created="20200618014049220" creator="debby" modified="20200619021521762" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>TiddlyBlink</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13497,6 +13499,9 @@ In order to follow the principle of never creating notes in isolation, here's a 
 </div>
 <div created="20200618131628910" creator="debby" modified="20200618132034647" modifier="debby" tags="[[Classic rock]]" title="Bob Dylan - Rough and Rowdy Ways">
 <pre>Bob Dylan’s albums has not intrigued me for a long time. Perhaps they never did because I don’t like how his work is overhyped here in Taiwan. However, this [[review|https://www.thelineofbestfit.com/reviews/albums/bob-dylan-remains-an-immeasurable-and-inimitable-force]] from //The Line of Best Fit// is very interesting. I also like the song titles a lot. Maybe I’ll give it a try when it’s available on Spotify.</pre>
+</div>
+<div created="20200619021609824" creator="debby" modified="20200619021658111" modifier="debby" tags="Britpop" title="Doves - Carousels">
+<pre>&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/9a239ZI3iYI&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;</pre>
 </div>
 <div created="20200618094249392" creator="debby" modified="20200618095052710" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
 <pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    
