Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10473,7 +10473,7 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20200228210954683" modified="20200304200152865" tags="tb" title="$:/palette">
+<div created="20200228210954683" creator="debby" modified="20200619033151620" modifier="debby" tags="tb" title="$:/palette">
 <pre>$:/palettes/TiddlyBlink</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
@@ -12303,7 +12303,7 @@ exports.context = contextWidget;
 <div created="20200619015624004" creator="debby" modified="20200619015631603" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown">
 <pre>yes</pre>
 </div>
-<div created="20200618095006136" creator="debby" modified="20200618095007862" modifier="debby" title="$:/state/showeditpreview">
+<div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
@@ -12312,8 +12312,8 @@ exports.context = contextWidget;
 <div created="20200618095532887" creator="debby" modified="20200618095536451" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200618093456470" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+<div created="20200618012853212" creator="debby" modified="20200619033035322" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200619015940443" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Advanced</pre>
@@ -12324,8 +12324,8 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200619015854403" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" creator="debby" modified="20200619033031910" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12339,7 +12339,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200619015606218" creator="debby" list="[[Doves - Carousels]] $:/core/ui/MoreSideBar/All TiddlyBlink" modified="20200619021521364" modifier="debby" title="$:/StoryList">
+<div created="20200619015606218" creator="debby" list="$:/core/ui/SideBar/Recent [[Doves - Carousels]]" modified="20200619033213574" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13368,8 +13368,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200619021521762" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink</pre>
+<div created="20200618014049220" creator="debby" modified="20200619033214011" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Doves - Carousels</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
