Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10473,8 +10473,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20200228210954683" creator="debby" modified="20200619033151620" modifier="debby" tags="tb" title="$:/palette">
-<pre>$:/palettes/TiddlyBlink</pre>
+<div created="20200228210954683" creator="debby" modified="20200622035648081" modifier="debby" tags="tb" title="$:/palette">
+<pre>$:/palettes/SolarFlare</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -12339,7 +12339,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200619015606218" creator="debby" list="$:/core/ui/SideBar/Recent [[Doves - Carousels]]" modified="20200619033213574" modifier="debby" title="$:/StoryList">
+<div created="20200622030056871" creator="debby" list="" modified="20200622035658348" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13368,7 +13368,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200619033214011" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200622035743839" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>Doves - Carousels</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
