--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@ Error message and password prompt
 
 <li>$:/state/showeditpreview</li>
 
+<li>$:/state/ShowPaletteEditor</li>
+
 <li>$:/state/tab--1190666861</li>
 
 <li>$:/state/tab--152518593</li>
@@ -493,9 +495,13 @@ Error message and password prompt
 
 <li>$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
 <li>$:/temp/tobibeer/preview-1-tiddler</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -10473,8 +10479,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20200228210954683" creator="debby" modified="20200622035648081" modifier="debby" tags="tb" title="$:/palette">
-<pre>$:/palettes/SolarFlare</pre>
+<div created="20200228210954683" creator="debby" modified="20200622100048040" modifier="debby" tags="tb" title="$:/palette">
+<pre>$:/palettes/TiddlyBlink</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -12306,13 +12312,16 @@ exports.context = contextWidget;
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
+<div created="20200622100054480" creator="debby" modified="20200622100054480" modifier="debby" title="$:/state/ShowPaletteEditor">
+<pre>yes</pre>
+</div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
 <div created="20200618095532887" creator="debby" modified="20200618095536451" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200619033035322" modifier="debby" title="$:/state/tab--1963855381">
+<div created="20200618012853212" creator="debby" modified="20200622095939652" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200619015940443" modifier="debby" title="$:/state/tab--2112689675">
@@ -12324,7 +12333,7 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200619033031910" modifier="debby" title="$:/state/tab-1749438307">
+<div created="20200527074318200" creator="debby" modified="20200622095908313" modifier="debby" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
@@ -12339,7 +12348,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200622030056871" creator="debby" list="" modified="20200622035658348" modifier="debby" title="$:/StoryList">
+<div created="20200622073810623" creator="debby" list="Welcome!" modified="20200622095904399" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13365,11 +13374,17 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
+<div created="20200622073705273" creator="debby" modified="20200622073714376" modifier="debby" title="$:/temp/search">
+<pre></pre>
+</div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200622035743839" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Doves - Carousels</pre>
+<div created="20200618014049220" creator="debby" modified="20200622100019753" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
+</div>
+<div created="20200622095932541" creator="debby" modified="20200622095938501" modifier="debby" title="$:/theme">
+<pre>$:/themes/tiddlywiki/vanilla</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
