Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>$:/state/tab--959111941</li>
 
+<li>$:/state/tab-1272344022</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -518,6 +520,8 @@ Error message and password prompt
 <li>Doves - Carousels</li>
 
 <li>From collector to creator</li>
+
+<li>Sticking to TiddlyWiki</li>
 
 <li>TiddlyBlink</li>
 
@@ -12333,6 +12337,9 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
+<div created="20200622100717300" creator="debby" modified="20200622100717300" modifier="debby" title="$:/state/tab-1272344022">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
+</div>
 <div created="20200527074318200" creator="debby" modified="20200622095908313" modifier="debby" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
@@ -12348,7 +12355,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200622073810623" creator="debby" list="Welcome!" modified="20200622095904399" modifier="debby" title="$:/StoryList">
+<div created="20200622073810623" creator="debby" list="[[Sticking to TiddlyWiki]] $:/core/ui/SideBar/Recent [[Bob Dylan - Rough and Rowdy Ways]]" modified="20200622100835180" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13380,8 +13387,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200622100200714" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200622100834729" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Draft of 'New Tiddler' by debby</pre>
 </div>
 <div created="20200622095932541" creator="debby" modified="20200622095938501" modifier="debby" title="$:/theme">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -13526,6 +13533,11 @@ In order to follow the principle of never creating notes in isolation, here's a 
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
+</div>
+<div created="20200622100446090" creator="debby" modified="20200622100929339" modifier="debby" tags="Note-taking" title="Sticking to TiddlyWiki">
+<pre>The temptation to use [[Roam Research]] is strong despite the offending price tag. Removing the necessity to categorize your notes is a great cognitive relief, it seems. This [[article|https://blog.fkynjyq.com/what-i-want-to-say-before-pay-for-roam-research/]] explains it very well.
+
+However, I hate to host my content on yet another third-party server. I will try to stick to TiddlyWiki even though I'm not a fan of the UI.</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
